@@ -90,12 +90,20 @@ INTERMediatorLib.addEvent(window, "beforeunload", function (e) {
 
 });
 
-INTERMediatorLib.addEvent(window, "unload", function (e) {
+INTERMediatorLib.addEvent(window, "unload", function () {
     INTERMediator_DBAdapter.unregister();
 });
 
 INTERMediatorLib.addEvent(window, "load", function () {
-    var errorNode = document.getElementById(INTERMediatorOnPage.nonSupportMessageId);
+    var key, errorNode;
+    if (INTERMediatorOnPage.initLocalContext)   {
+        for (key in INTERMediatorOnPage.initLocalContext) {
+            if (INTERMediatorOnPage.initLocalContext.hasOwnProperty(key)){
+                IMLibLocalContext.setValue(key, INTERMediatorOnPage.initLocalContext[key], true);
+            }
+        }
+    }
+    errorNode = document.getElementById(INTERMediatorOnPage.nonSupportMessageId);
     if (errorNode) {
         if (INTERMediatorOnPage.INTERMediatorCheckBrowser(errorNode)) {
             if (INTERMediatorOnPage.doBeforeConstruct)  {
