@@ -13,7 +13,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title data-im="_@pagetitle"></title>
     <script type="text/javascript" src="crosstable.php"></script>
     <script type="text/javascript">
 //        window.onload = function () {
